[tool.poetry]
name = "mobile-photo-tools"
version = "0.1.0"
description = "Toolbox to manipulate and manage photos"
authors = ["Sébastien MB <seb@essembeh.org>"]

[tool.poetry.dependencies]
python = "^3.7"
cached-property = "^1.5.2"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^20.8b1"
pylint = "^2.6.0"

[tool.poetry.scripts]
mpt-diff = 'mobile_photo_tools.cli.diff:run'
mpt-dispatch = 'mobile_photo_tools.cli.dispatch:run'
mpt-md5rename = 'mobile_photo_tools.cli.md5rename:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
